--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
+    "@tanstack/react-query": "^5.59.20",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.446.0",
     "next": "15.0.1",
