--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -14,7 +14,10 @@
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@tanstack/react-query": "^5.59.20",
+    "@types/jsoneditor": "^9.9.5",
+    "ace-builds": "^1.36.4",
     "class-variance-authority": "^0.7.0",
+    "jsoneditor": "^10.1.1",
     "lucide-react": "^0.446.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
