--- a/aiverify-apigw/pyproject.toml
+++ b/aiverify-apigw/pyproject.toml
@@ -32,7 +32,13 @@ dependencies = [
   "python-dotenv>=1.0.1",
   "sqlalchemy>=2.0.32",
   "boto3>=1.35.6",
-  "jsonschema>=4.23.0"
+  "jsonschema>=4.23.0",
+  "pydantic==2.*",
+]
+
+[tool.hatch.envs.default]
+post-install-commands = [
+  "pip install -e ../aiverify-test-engine[all]",
 ]
 
 [tool.hatch.envs.default.scripts]
