--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -13,17 +13,24 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.6",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.59.20",
     "@types/jsoneditor": "^9.9.5",
+    "@types/mdx": "^2.0.13",
     "ace-builds": "^1.36.4",
     "class-variance-authority": "^0.7.0",
     "fuse.js": "^7.0.0",
-    "jszip": "^3.10.1",
     "jsoneditor": "^10.1.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.446.0",
     "next": "15.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-grid-layout": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vanilla-tilt": "^1.8.1",
@@ -34,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/react-grid-layout": "^1.3.5",
     "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
