--- a/aiverify-portal/tsconfig.json
+++ b/aiverify-portal/tsconfig.json
@@ -11,6 +11,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "noImplicitAny": true,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
