--- a/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect/pyproject.toml
+++ b/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 dependencies = [
     "numpy==1.26.4",
     "pandas==2.2.2",
-    "aiverify-test-engine==2.0.0a1",
+    "aiverify-test-engine>=2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
