--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification/pyproject.toml
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "joblib==1.4.2",
     "scikit-learn==1.5.2",
     "scipy==1.14.1",
-    "aiverify-test-engine==2.0.0a1",
+    "aiverify-test-engine>=2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
