--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "scipy==1.14.1",
     "opencv-python==4.10.0.84",
     "scikit-image==0.24.0",
-    "aiverify-test-engine==2.0.0a1",
+    "aiverify-test-engine>=2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
