--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "scikit-learn==1.5.2",
     "scipy==1.14.1",
     "scikit-image==0.24.0",
-    "aiverify-test-engine==2.0.0a1",
+    "aiverify-test-engine>=2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
