--- a/stock-plugins/aiverify.stock.partial-dependence-plot/algorithms/partial_dependence_plot/pyproject.toml
+++ b/stock-plugins/aiverify.stock.partial-dependence-plot/algorithms/partial_dependence_plot/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 dependencies = [
     "numpy==1.26.4",
     "scipy==1.14.1",
-    "aiverify-test-engine==2.0.0a1",
+    "aiverify-test-engine>=2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
