--- a/stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox/pyproject.toml
+++ b/stock-plugins/aiverify.stock.robustness-toolbox/algorithms/robustness_toolbox/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "joblib==1.4.2",
     "scikit-learn==1.5.2",
     "pillow===10.4.0",
-    "aiverify-test-engine==2.0.0a1",
+    "aiverify-test-engine>=2.0.0a1",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
