grid item component base

--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -23,10 +23,12 @@
     "@types/mdx": "^2.0.13",
     "ace-builds": "^1.36.4",
     "class-variance-authority": "^0.7.0",
+    "esbuild": "^0.24.2",
     "fuse.js": "^7.0.0",
     "jsoneditor": "^10.1.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.446.0",
+    "mdx-bundler": "^10.0.3",
     "next": "15.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
