--- a/.github/workflows/v2-pre-build-checks-test-engine.yml
+++ b/.github/workflows/v2-pre-build-checks-test-engine.yml
@@ -24,9 +24,6 @@ on:
         default: 'v2.x'
         type: string
 
-  push:
-    branches: [ "ci/v2-workflows" ]
-
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
@@ -59,7 +56,7 @@ jobs:
           echo "${{ inputs.branch_to_test }}"
 
       # Checkout code
-      - name: Checkout code (moonshot)
+      - name: Checkout code
         uses: actions/checkout@v3
         with:
           ref: ${{ env.MS_BRANCH }}
@@ -157,29 +154,3 @@ jobs:
       #   env:
       #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-
-
-
-
-
-      # Unit Tests & Coverage
-      - name: Unit tests with coverage
-        if: ${{ ! cancelled() }}
-        working-directory: ${{ github.workspace }}/aiverify-test-engine
-        timeout-minutes: 30
-        run: |
-          bash ci/run-test.sh
-
-      # flake8
-      - name: Code quality analysis - lint
-        if: ${{ ! cancelled() }}
-        working-directory: ${{ github.workspace }}/aiverify-test-engine
-        run: |
-          bash ci/run-flake8.sh
-
-      # pip-audit
-      - name: Dependency analysis - vulnerabilities & licenses
-        if: ${{ ! cancelled() }}
-        working-directory: ${{ github.workspace }}/aiverify-test-engine
-        run: |
-          bash ci/run-pip-audit.sh
