--- a/.github/workflows/v2-pre-build-checks-test-engine.yml
+++ b/.github/workflows/v2-pre-build-checks-test-engine.yml
@@ -59,6 +59,7 @@ jobs:
           ref: ${{ env.MS_BRANCH }}
           sparse-checkout: |
             aiverify-test-engine
+            .ci
 
       # Setup python    
       - name: Setup python 3.11
@@ -84,10 +85,10 @@ jobs:
         timeout-minutes: 30
         run: |
           set +e
-          bash ci/run-test.sh
-          source ci/gen_pre_build_summ.sh test
+          bash ../.ci/run-test.sh aiverify_test_engine
+          source ../.ci/gen_pre_build_summ.sh test
           test_status=$?
-          source ci/gen_pre_build_summ.sh coverage
+          source ../.ci/gen_pre_build_summ.sh coverage
           coverage_status=$?
           echo "UNIT_TESTS_STATUS=$UNITTEST_SUMMARY" >> $GITHUB_ENV
           echo "CODE_COVERAGE_STATUS=$COVERAGE_SUMMARY" >> $GITHUB_ENV
@@ -103,8 +104,8 @@ jobs:
         working-directory: ${{ github.workspace }}/aiverify-test-engine
         run: |
           set +e
-          bash ci/run-flake8.sh
-          source ci/gen_pre_build_summ.sh lint
+          bash ../.ci/run-flake8.sh aiverify_test_engine
+          source ../.ci/gen_pre_build_summ.sh lint
           lint_status=$?
           echo "CODE_QUALITY_STATUS=$LINT_SUMMARY" >> $GITHUB_ENV
           set -e
@@ -117,10 +118,10 @@ jobs:
         working-directory: ${{ github.workspace }}/aiverify-test-engine
         run: |
           set +e
-          bash ci/run-pip-audit.sh
-          source ci/gen_pre_build_summ.sh dependency
+          bash ../.ci/run-pip-audit.sh
+          source ../.ci/gen_pre_build_summ.sh dependency
           dep_status=$?
-          source ci/gen_pre_build_summ.sh license
+          source ../.ci/gen_pre_build_summ.sh license
           lic_status=$?
           echo "DEPENDENCY_STATUS=$DEPENDENCY_SUMMARY" >> $GITHUB_ENV
           echo "LICENSE_STATUS=$LICENSE_SUMMARY" >> $GITHUB_ENV
