v2 pre-build-check for plugins

--- a/.github/workflows/v2-pre-build-checks-plugin.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin.yml
@@ -62,6 +62,7 @@ jobs:
           ref: ${{ env.MS_BRANCH }}
           sparse-checkout: |
             stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect
+            stock-plugins/user_defined_files
             .ci
 
       # Setup python    
