--- a/.github/workflows/v2-pre-build-checks-plugin.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin.yml
@@ -24,9 +24,6 @@ on:
         default: 'v2.x'
         type: string
 
-  push:
-    branches: [ "ci/v2-workflows" ]
-
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
@@ -100,3 +97,59 @@ jobs:
                 exit 1
             fi
 
+      # Check 2: Code quality analysis (flake8)
+      - name: Code quality analysis (flake8)
+        id: code_quality
+        if: ${{ ! cancelled() }}
+        working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect
+        run: |
+          set +e
+          bash ../../../../.ci/run-flake8.sh aiverify_accumulated_local_effect
+          source ../../../../.ci/gen_pre_build_summ.sh lint
+          lint_status=$?
+          echo "CODE_QUALITY_STATUS=$LINT_SUMMARY" >> $GITHUB_ENV
+          set -e
+          exit $lint_status
+
+      # Check 3: Dependency vulnerability & license analysis (pip-audit)
+      - name: Dependency analysis (vulnerabilities & licenses)
+        id: dependency_analysis
+        if: ${{ ! cancelled() }}
+        working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.accumulated-local-effect/algorithms/accumulated_local_effect
+        run: |
+          set +e
+          bash ../../../../.ci/run-pip-audit.sh
+          source ../../../../.ci/gen_pre_build_summ.sh dependency
+          dep_status=$?
+          source ../../../../.ci/gen_pre_build_summ.sh license
+          lic_status=$?
+          echo "DEPENDENCY_STATUS=$DEPENDENCY_SUMMARY" >> $GITHUB_ENV
+          echo "LICENSE_STATUS=$LICENSE_SUMMARY" >> $GITHUB_ENV
+          set -e
+          if [ $dep_status -ne 0 ] || [ $lic_status -ne 0 ]; then
+            exit 1
+          fi
+
+      - name: Capture step statuses
+        if: ${{ ! cancelled() }}
+        run: |
+          echo "UNIT_TESTS_STATUS=${{ steps.unit_tests.outcome }}" >> $GITHUB_ENV
+          echo "CODE_QUALITY_STATUS=${{ steps.code_quality.outcome }}" >> $GITHUB_ENV
+          echo "DEPENDENCY_ANALYSIS_STATUS=${{ steps.dependency_analysis.outcome }}" >> $GITHUB_ENV
+
+      # # Send slack notification
+      # - name: Send slack notification
+      #   if: ${{ ! cancelled() }}
+      #   uses: slackapi/slack-github-action@v1.26.0
+      #   with:
+      #     payload: |
+      #       {
+      #         "workflow": "${{ github.repository }} | ${{ github.workflow }} | ${{ env.PR_NUM }}",
+      #         "status": "${{ job.status }}",
+      #         "details": "${{ env.UNIT_TESTS_STATUS }} | ${{ env.CODE_COVERAGE_STATUS }} | ${{ env.CODE_QUALITY_STATUS }} | ${{ env.DEPENDENCY_STATUS }} | ${{ env.LICENSE_STATUS }}",
+      #         "ref": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+      #       }
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+            
