v2 pre-build-check for test-engine

--- a/.github/workflows/v2-pre-build-checks-test-engine.yml
+++ b/.github/workflows/v2-pre-build-checks-test-engine.yml
@@ -76,6 +76,8 @@ jobs:
           pip install .[all]
           pip install pytest pytest-mock pytest-html pytest-json pytest-cov coverage anybadge
           pip install flake8 flake8-html
+          pip install pipdeptree
+          pipdeptree -fl 
 
       # Check 1: Unit tests & coverage
       - name: Unit tests with coverage
