--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -18,6 +18,7 @@
     "@next/mdx": "^15.1.6",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.59.20",
     "@types/jsoneditor": "^9.9.5",
