--- a/.github/workflows/v2-pre-build-checks-plugin.yml
+++ b/.github/workflows/v2-pre-build-checks-plugin.yml
@@ -66,89 +66,26 @@ jobs:
 
       # Checkout code
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ env.MS_BRANCH }}
           sparse-checkout: |
-            stock-plugins/aiverify.stock.${{ env.PLUGIN_NAME }}/algorithms/${{ env.ALGO_NAME }}
-            stock-plugins/user_defined_files
-            .ci
+            .github/actions/pre-build-checks-plugin
 
-      # Setup python    
-      - name: Setup python 3.11
-        uses: actions/setup-python@v5
+      - name: Run pre-build checks
+        id: pre_build_checks
+        uses: ./.github/actions/pre-build-checks-plugin
         with:
-          python-version: "3.11"
-          cache: 'pip'
-          cache-dependency-path: stock-plugins
-
-      # Install dependencies
-      - name: Install dependencies
-        working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.${{ env.PLUGIN_NAME }}/algorithms/${{ env.ALGO_NAME }}
-        run: |
-          pip install .
-          pip install pytest pytest-mock pytest-html pytest-json pytest-cov coverage anybadge
-          pip install flake8 flake8-html
-
-      # Check 1: Unit tests & coverage    
-      - name: Unit tests with coverage
-        working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.${{ env.PLUGIN_NAME }}/algorithms/${{ env.ALGO_NAME }}
-        if: ${{ ! cancelled() }}
-        timeout-minutes: 30
-        run: |      
-            set +e
-            bash ../../../../.ci/run-test.sh aiverify_${{ env.ALGO_NAME }} -m
-            source ../../../../.ci/gen_pre_build_summ.sh test
-            test_status=$?
-            source ../../../../.ci/gen_pre_build_summ.sh coverage
-            coverage_status=$?
-            echo "UNIT_TESTS_STATUS=$UNITTEST_SUMMARY" >> $GITHUB_ENV
-            echo "CODE_COVERAGE_STATUS=$COVERAGE_SUMMARY" >> $GITHUB_ENV
-            set -e
-            if [ $test_status -ne 0 ] || [ $coverage_status -ne 0 ]; then
-                exit 1
-            fi
-
-      # Check 2: Code quality analysis (flake8)
-      - name: Code quality analysis (flake8)
-        id: code_quality
-        if: ${{ ! cancelled() }}
-        working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.${{ env.PLUGIN_NAME }}/algorithms/${{ env.ALGO_NAME }}
-        run: |
-          set +e
-          cp ../../../../.ci/.flake8 .
-          bash ../../../../.ci/run-flake8.sh aiverify_${{ env.ALGO_NAME }}
-          source ../../../../.ci/gen_pre_build_summ.sh lint
-          lint_status=$?
-          echo "CODE_QUALITY_STATUS=$LINT_SUMMARY" >> $GITHUB_ENV
-          set -e
-          exit $lint_status
-
-      # Check 3: Dependency vulnerability & license analysis (pip-audit)
-      - name: Dependency analysis (vulnerabilities & licenses)
-        id: dependency_analysis
-        if: ${{ ! cancelled() }}
-        working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.${{ env.PLUGIN_NAME }}/algorithms/${{ env.ALGO_NAME }}
-        run: |
-          set +e
-          bash ../../../../.ci/run-pip-audit.sh
-          source ../../../../.ci/gen_pre_build_summ.sh dependency
-          dep_status=$?
-          source ../../../../.ci/gen_pre_build_summ.sh license
-          lic_status=$?
-          echo "DEPENDENCY_STATUS=$DEPENDENCY_SUMMARY" >> $GITHUB_ENV
-          echo "LICENSE_STATUS=$LICENSE_SUMMARY" >> $GITHUB_ENV
-          set -e
-          if [ $dep_status -ne 0 ] || [ $lic_status -ne 0 ]; then
-            exit 1
-          fi
+          branch_to_test: ${{ env.MS_BRANCH }}
+          plugin_name: ${{ env.PLUGIN_NAME }}
+          algo_name: ${{ env.ALGO_NAME }}
 
       - name: Capture step statuses
         if: ${{ ! cancelled() }}
         run: |
-          echo "UNIT_TESTS_STATUS=${{ steps.unit_tests.outcome }}" >> $GITHUB_ENV
-          echo "CODE_QUALITY_STATUS=${{ steps.code_quality.outcome }}" >> $GITHUB_ENV
-          echo "DEPENDENCY_ANALYSIS_STATUS=${{ steps.dependency_analysis.outcome }}" >> $GITHUB_ENV
+          echo "UNIT_TESTS_STATUS=${{ steps.pre_build_checks.outputs.unit_tests_status }}" >> $GITHUB_ENV
+          echo "CODE_QUALITY_STATUS=${{ steps.pre_build_checks.outputs.code_quality_status }}" >> $GITHUB_ENV
+          echo "DEPENDENCY_ANALYSIS_STATUS=${{ steps.pre_build_checks.outputs.dependency_status }}" >> $GITHUB_ENV
 
       # # Send slack notification
       # - name: Send slack notification
@@ -164,5 +101,3 @@ jobs:
       #       }
       #   env:
       #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-            
