--- a/.github/actions/pre-build-checks-plugin/action.yml
+++ b/.github/actions/pre-build-checks-plugin/action.yml
@@ -79,10 +79,10 @@ runs:
       if: ${{ ! cancelled() }}
       run: |      
           set +e
-          bash ../../../.ci/run-test.sh aiverify_${{ env.ALGO_NAME }} -m
-          source ../../../.ci/gen_pre_build_summ.sh test
+          bash ../../../../.ci/run-test.sh aiverify_${{ env.ALGO_NAME }} -m
+          source ../../../../.ci/gen_pre_build_summ.sh test
           test_status=$?
-          source ../../../.ci/gen_pre_build_summ.sh coverage
+          source ../../../../.ci/gen_pre_build_summ.sh coverage
           coverage_status=$?
           echo "UNIT_TESTS_STATUS=$UNITTEST_SUMMARY" >> $GITHUB_ENV
           echo "CODE_COVERAGE_STATUS=$COVERAGE_SUMMARY" >> $GITHUB_ENV
@@ -99,9 +99,9 @@ runs:
       working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.${{ env.PLUGIN_NAME }}/algorithms/${{ env.ALGO_NAME }}
       run: |
         set +e
-        cp ../../../.ci/.flake8 .
-        bash ../../../.ci/run-flake8.sh aiverify_${{ env.ALGO_NAME }}
-        source ../../../.ci/gen_pre_build_summ.sh lint
+        cp ../../../../.ci/.flake8 .
+        bash ../../../../.ci/run-flake8.sh aiverify_${{ env.ALGO_NAME }}
+        source ../../../../.ci/gen_pre_build_summ.sh lint
         lint_status=$?
         echo "CODE_QUALITY_STATUS=$LINT_SUMMARY" >> $GITHUB_ENV
         set -e
@@ -115,10 +115,10 @@ runs:
       working-directory: ${{ github.workspace }}/stock-plugins/aiverify.stock.${{ env.PLUGIN_NAME }}/algorithms/${{ env.ALGO_NAME }}
       run: |
         set +e
-        bash ../../../.ci/run-pip-audit.sh
-        source ../../../.ci/gen_pre_build_summ.sh dependency
+        bash ../../../../.ci/run-pip-audit.sh
+        source ../../../../.ci/gen_pre_build_summ.sh dependency
         dep_status=$?
-        source ../../../.ci/gen_pre_build_summ.sh license
+        source ../../../../.ci/gen_pre_build_summ.sh license
         lic_status=$?
         echo "DEPENDENCY_STATUS=$DEPENDENCY_SUMMARY" >> $GITHUB_ENV
         echo "LICENSE_STATUS=$LICENSE_SUMMARY" >> $GITHUB_ENV
