--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -291,7 +291,7 @@ jobs:
 
     - name: Commit All Notices File
       run: |
-        git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+        git config --global user.name $GITHUB_ACTOR
         git config --global user.email "username@users.noreply.github.com"
         git add .
         git commit -m "Update All Notices File"
