--- a/.github/workflows/v2-pre-build-checks-test-engine.yml
+++ b/.github/workflows/v2-pre-build-checks-test-engine.yml
@@ -73,11 +73,11 @@ jobs:
       - name: Install dependencies
         working-directory: ${{ github.workspace }}/aiverify-test-engine
         run: |
-          pip install .[all]
-          pip install pytest pytest-mock pytest-html pytest-json pytest-cov coverage anybadge
-          pip install flake8 flake8-html
-          pip install pipdeptree
+          pip install .[all] > /dev/null
+          pip install pipdeptree > /dev/null
           pipdeptree -fl 
+          pip install pytest pytest-mock pytest-html pytest-json pytest-cov coverage anybadge > /dev/null
+          pip install flake8 flake8-html > /dev/null
 
       # Check 1: Unit tests & coverage
       - name: Unit tests with coverage
