--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -295,4 +295,4 @@ jobs:
         git config --global user.email "username@users.noreply.github.com"
         git add .
         git commit -m "Update All Notices File"
-        # git push
+        git push $GITHUB_REF
